fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Date_of_Event__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Event__c</fullName>
    <formula>Education_Record__r.Date_of_Event_Start__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Event</label>
    <type>Date</type>
</CustomField>