fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Education_Contractor__c.field-meta.xml
<CustomField>
    <fullName>Education_Contractor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Education Contractor</label>
    <referenceTo>Education_Contractor__c</referenceTo>
    <relationshipLabel>CE Reimbursement/Expenses</relationshipLabel>
    <relationshipName>CE_Reimbursement_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>