fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Education_Record__c.field-meta.xml
<CustomField>
    <fullName>Education_Record__c</fullName>
    <label>Education Record</label>
    <referenceTo>Education_Record__c</referenceTo>
    <relationshipLabel>CE Reimbursement/Expenses</relationshipLabel>
    <relationshipName>Education_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>