fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Education_Record_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Education_Record_Name_Text__c</fullName>
    <formula>Education_Record__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Education Record Name Text</label>
    <type>Text</type>
</CustomField>