fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Education_Updates_for_CE__c.field-meta.xml
<CustomField>
    <fullName>Education_Updates_for_CE__c</fullName>
    <inlineHelpText>Enter Hours - total will calculate based on hourly rate</inlineHelpText>
    <label>Education/Updates for CE (Hrs)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>