fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Eggs__c.field-meta.xml
<CustomField>
    <fullName>Eggs__c</fullName>
    <label>Eggs ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>