fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Email_Sent_to_AP__c.field-meta.xml
<CustomField>
    <fullName>Email_Sent_to_AP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Email Sent to AP</label>
    <type>Checkbox</type>
</CustomField>