fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <inlineHelpText>This is the Engagement Type from the Contractor Record</inlineHelpText>
    <label>Engagement Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>