fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/EROldPrimaryProduct__c.field-meta.xml
<CustomField>
    <fullName>EROldPrimaryProduct__c</fullName>
    <formula>Text(Education_Record__r.Primary_Product__c )</formula>
    <label>ER Old Primary Product</label>
    <type>Text</type>
</CustomField>