fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/ERPrimaryProduct__c.field-meta.xml
<CustomField>
    <fullName>ERPrimaryProduct__c</fullName>
    <formula>TEXT(Education_Record__r.VAProduct1__c)</formula>
    <label>ER Primary Product</label>
    <type>Text</type>
</CustomField>