fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/ERProductofFocus1__c.field-meta.xml
<CustomField>
    <fullName>ERProductofFocus1__c</fullName>
    <formula>TEXT(Education_Record__r.IAProductofFocus1__c)</formula>
    <label>ER Product of Focus 1</label>
    <type>Text</type>
</CustomField>