fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/ERProductofFocus2__c.field-meta.xml
<CustomField>
    <fullName>ERProductofFocus2__c</fullName>
    <formula>TEXT(Education_Record__r.IAProductofFocus2__c )</formula>
    <label>ER Product of Focus 2</label>
    <type>Text</type>
</CustomField>