fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Exc_In__c.field-meta.xml
<CustomField>
    <fullName>Exc_In__c</fullName>
    <description>This field is for Pleur-evac , Percuvance and Autofuser rules</description>
    <label>Exception Inservice</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>