fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Grand_Total_Reimbursement__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total_Reimbursement__c</fullName>
    <formula>Sub_Total_Non_Taxable_Income__c + Sub_Total_Taxable_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Grand Total Reimbursement</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>