fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Ground_Transportation__c.field-meta.xml
<CustomField>
    <fullName>Ground_Transportation__c</fullName>
    <inlineHelpText>parking, tolls, taxi, bag fee, etc.</inlineHelpText>
    <label>Transportation ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>