fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Hotel_Tips__c.field-meta.xml
<CustomField>
    <fullName>Hotel_Tips__c</fullName>
    <label>Hotel Tips ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>