fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Ins_Hours__c.field-meta.xml
<CustomField>
    <fullName>Ins_Hours__c</fullName>
    <inlineHelpText>In-Service hours, 8 hours maximum UNLESS approved</inlineHelpText>
    <label>Inservice (Hours)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>