fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Lab_Role__c.field-meta.xml
<CustomField>
    <fullName>Lab_Role__c</fullName>
    <label>Lab Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Lead</fullName>
            </value>
            <value>
                <fullName>Faculty</fullName>
            </value>
            <value>
                <fullName>Clinical Advisor</fullName>
            </value>
            <value>
                <fullName>CE Prof. Development</fullName>
            </value>
            <value>
                <fullName>CA Prof. Development</fullName>
            </value>
            <value>
                <fullName>Expert Faculty</fullName>
            </value>
            <value>
                <fullName>Proficient Faculty</fullName>
            </value>
            <value>
                <fullName>Expert Airway</fullName>
            </value>
            <value>
                <fullName>Proficient Airway</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>