fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Lab_Type__c.field-meta.xml
<CustomField>
    <fullName>Lab_Type__c</fullName>
    <formula>Education_Record__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lab Type</label>
    <type>Text</type>
</CustomField>