fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Link_to_CE_Portal__c.field-meta.xml
<CustomField>
    <fullName>Link_to_CE_Portal__c</fullName>
    <formula>&quot;https://tfx.secure.force.com/ClinicalEducation?Id=&quot;+ Id</formula>
    <label>Link to CE Portal</label>
    <type>Text</type>
</CustomField>