fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Meals__c.field-meta.xml
<CustomField>
    <fullName>Meals__c</fullName>
    <label>Meals ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>