fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Mil_Rate__c.field-meta.xml
<CustomField>
    <fullName>Mil_Rate__c</fullName>
    <label>Clinical Mileage Rate</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>