fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Mileage__c.field-meta.xml
<CustomField>
    <fullName>Mileage__c</fullName>
    <label>Mileage</label>
    <precision>7</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>