fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Oncontrol__c.field-meta.xml
<CustomField>
    <fullName>Oncontrol__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oncontrol Lead</label>
    <type>Checkbox</type>
</CustomField>