fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Other_Fee2__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee2__c</fullName>
    <inlineHelpText>Other Fee 2</inlineHelpText>
    <label>Other Fee ($)</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>