fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Other_Fee3_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Fee3_Detail__c</fullName>
    <inlineHelpText>pertains to Other Fee ($) field entry 
Other Fee 3</inlineHelpText>
    <label>Other Fee Detail</label>
    <type>TextArea</type>
</CustomField>