fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Pain__c.field-meta.xml
<CustomField>
    <fullName>Pain__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did you assist as a clinical lead Pain Managment or OnControl (200 $ additional to the lab)</description>
    <label>Pain Mgmt Lead</label>
    <type>Checkbox</type>
</CustomField>