fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Pay_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>Pay_Rate_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pay Rate Card</label>
    <referenceTo>Pay_Profile__c</referenceTo>
    <relationshipLabel>CE Reimbursement/Expenses</relationshipLabel>
    <relationshipName>CE_Reimbursement_Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>