fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/PresentationPrepTime__c.field-meta.xml
<CustomField>
    <fullName>PresentationPrepTime__c</fullName>
    <label>Presentation Prep Time</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>