fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Primary_Product__c.field-meta.xml
<CustomField>
    <fullName>Primary_Product__c</fullName>
    <formula>TEXT(Education_Record__r.Primary_Product__c)</formula>
    <label>Primary Product</label>
    <type>Text</type>
</CustomField>