fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/RCEM__c.field-meta.xml
<CustomField>
    <fullName>RCEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RCEM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CE_Reimbursement_Expenses1</relationshipName>
    <type>Lookup</type>
</CustomField>