fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/RCEM_Name__c.field-meta.xml
<CustomField>
    <fullName>RCEM_Name__c</fullName>
    <formula>RCEM__r.FirstName &amp; &quot; &quot; &amp; RCEM__r.LastName</formula>
    <label>RCEM Name</label>
    <type>Text</type>
</CustomField>