fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Reimbursement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Reimbursement_Rate__c</fullName>
    <inlineHelpText>This is from the Rate Card of the Profile</inlineHelpText>
    <label>Reimbursement Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>