fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Roster_Attached_in_Portal__c.field-meta.xml
<CustomField>
    <fullName>Roster_Attached_in_Portal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Roster Attached in Portal</label>
    <type>Checkbox</type>
</CustomField>