fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Signing_Fee_300__c.field-meta.xml
<CustomField>
    <fullName>Signing_Fee_300__c</fullName>
    <label>Signing Fee ($300)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>