fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Speak_Eng__c.field-meta.xml
<CustomField>
    <fullName>Speak_Eng__c</fullName>
    <formula>IF (Contains(CRF_Type__c,&quot;Speaking Engagement&quot;),
     
       IF (Clinical_Educator_Name__r.RecordType.Name = &quot;Clinical Educator&quot;,
        Case(CurrencyIsoCode,&quot;USD&quot;,625,825),
        Case(CurrencyIsoCode,&quot;USD&quot;,1500,1980))
    ,0)
 * T_days__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Speaking Engagement New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>