fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Speak_Engmt__c.field-meta.xml
<CustomField>
    <fullName>Speak_Engmt__c</fullName>
    <label>Speaking Engagement ($)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>