fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
                <default>true</default>
                <label>Save</label>
            </value>
            <value>
                <fullName>Submit CRF</fullName>
            </value>
            <value>
                <fullName>Submitted Manually (10/1/14 - 10/31/14)</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Pending Approval</fullName>
            </value>
            <value>
                <fullName>Approved for Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>