fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Sub_Total_Non_Taxable_Income__c.field-meta.xml
<CustomField>
    <fullName>Sub_Total_Non_Taxable_Income__c</fullName>
    <formula>Total_Eggs__c + Total_Airline__c + Total_Hotel__c + Total_Meals__c + Total_Ground_Trans__c + Total_Mileage__c+ Total_Other3__c + Total_Other4__c+Total_Hotel_Tips__c+Total_Transportation_Tips__c+Total_Meal_Tips__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sub Total Non-Taxable Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>