fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Submit_Age__c.field-meta.xml
<CustomField>
    <fullName>Submit_Age__c</fullName>
    <formula>Date_Submitted__c - Date_of_Event__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Submit Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>