fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Air__c.field-meta.xml
<CustomField>
    <fullName>T_Air__c</fullName>
    <formula>Airline_Ticket__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Airline)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>