fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_days__c.field-meta.xml
<CustomField>
    <fullName>T_days__c</fullName>
    <label>Total Worked Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>