fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Ed__c.field-meta.xml
<CustomField>
    <fullName>T_Ed__c</fullName>
    <formula>Ed_CE__c * 25</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>