fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_EdUpdate__c.field-meta.xml
<CustomField>
    <fullName>T_EdUpdate__c</fullName>
    <description>used to calculate Total CE Reimbursement expenses</description>
    <formula>IF(ISPICKVAL(Education_Record__r.Primary_Product__c, &quot;EZ-IO&quot;),
(Ed_CE__c*25.00),
(Ed_CE__c * C_Rate__c /2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total EdUpdate for CE calc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>