fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Eggs__c.field-meta.xml
<CustomField>
    <fullName>T_Eggs__c</fullName>
    <formula>Eggs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Eggs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>