fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_ExpCMA__c.field-meta.xml
<CustomField>
    <fullName>T_ExpCMA__c</fullName>
    <formula>CMAH__c + CMA_Travel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses Paid by Directly CMA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>