fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_In_Hours__c.field-meta.xml
<CustomField>
    <fullName>T_In_Hours__c</fullName>
    <formula>If(AND(OR(Primary_Product__c = &quot;Pleur-evac&quot;,
           Primary_Product__c = &quot;Percuvance&quot;),
         Inservice_Hours__c  &gt;4), 500,
       IF(
          AND(Primary_Product__c = &quot;AutoFuser&quot;,
              Inservice_Hours__c &gt;4,
              Inservice_Hours__c &lt;8) , 650,
       IF(
          AND(Primary_Product__c = &quot;AutoFuser&quot;,
              Inservice_Hours__c &gt;8) , 900,
0  )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotaI In-Service Hours New</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>