fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_InsHours__c.field-meta.xml
<CustomField>
    <fullName>T_InsHours__c</fullName>
    <formula>IF( Inservice_Hours__c&gt;0, C_Rate__c * Inservice_Hours__c, C_Rate__c * Ins_Hours__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total currency amount for Inservice hours multiplied by rate</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>