fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Meals__c.field-meta.xml
<CustomField>
    <fullName>T_Meals__c</fullName>
    <formula>Meals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Meals)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>