fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Mil__c.field-meta.xml
<CustomField>
    <fullName>T_Mil__c</fullName>
    <formula>Mileage__c * Mil_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculation based on the Clinical Mileage Rate.</inlineHelpText>
    <label>Total (Mileage)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>