fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_S_Fee__c.field-meta.xml
<CustomField>
    <fullName>T_S_Fee__c</fullName>
    <formula>Signing_Fee_300__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total of Signing Fee</inlineHelpText>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>