fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Tran__c.field-meta.xml
<CustomField>
    <fullName>T_Tran__c</fullName>
    <formula>Ground_Transportation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Transportation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>