fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/T_Travel__c.field-meta.xml
<CustomField>
    <fullName>T_Travel__c</fullName>
    <formula>/* Putting a check in for legacy travel time before the 2018 changes went in */
if(ISBLANK(Engagement_Type__c),
Travel_Time__c  * TravelRate__c,
/* Otherwise using the 2018 travel time calculations of half of the hourly rate - 02Jan2018 ESC */
if(CONTAINS(Engagement_Type__c, &quot;Hour&quot;), ROUND(Reimbursement_Rate__c/2,2) ,0)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>