fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Time_Worked__c.field-meta.xml
<CustomField>
    <fullName>Time_Worked__c</fullName>
    <label>Time Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>