fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Conf_Booth__c.field-meta.xml
<CustomField>
    <fullName>Total_Conf_Booth__c</fullName>
    <formula>Conference_Booth__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>