fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Expenses_Paid_by_Directly_CMA__c.field-meta.xml
<CustomField>
    <fullName>Total_Expenses_Paid_by_Directly_CMA__c</fullName>
    <formula>CMA_Hotel__c + CMA_Travel__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Expenses Paid by Directly CMA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>