fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Hotel_Tips__c.field-meta.xml
<CustomField>
    <fullName>Total_Hotel_Tips__c</fullName>
    <formula>Hotel_Tips__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Hotel Tips)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>