fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Meals__c.field-meta.xml
<CustomField>
    <fullName>Total_Meals__c</fullName>
    <formula>Meals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>