fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Other1__c.field-meta.xml
<CustomField>
    <fullName>Total_Other1__c</fullName>
    <formula>Other_Fee1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Other #1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>