fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Other3__c.field-meta.xml
<CustomField>
    <fullName>Total_Other3__c</fullName>
    <formula>Other_Fee3__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Other #3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>