fullSandbox11072023/force-app/main/default/objects/CE_Reimbursement_Expense__c/fields/Total_Time_Worked__c.field-meta.xml
<CustomField>
    <fullName>Total_Time_Worked__c</fullName>
    <formula>/*

These were the old formulas 

1.  Reimbursement_Rate__c * Time_Worked__c

2. IF( 
   Engagement_Type__c = &quot;Procedural Program - Physician (Day)&quot;, 
   Reimbursement_Rate__c + ((Time_Worked__c - 1)*(Reimbursement_Rate__c * 0.5)), 
   (Reimbursement_Rate__c * Time_Worked__c))*/

IF( 
  AND(Engagement_Type__c = &quot;Procedural Program - Physician (Day)&quot;, 
      Time_Worked__c=0),0, 
  IF( 
     AND(Engagement_Type__c = &quot;Procedural Program - Physician (Day)&quot;, 
         Time_Worked__c &gt;0), 
  Reimbursement_Rate__c + ((Time_Worked__c - 1)*(Reimbursement_Rate__c * 0.5)), 
  (Reimbursement_Rate__c * Time_Worked__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total (Time Worked)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>